style.css
* {
  padding: 0px;
  margin: 0px;
  box-sizing: border-box;
  font-family: "Roboto";
}

.root {
  padding: 10px;
}
.title {
  text-align: center;
  font-size: 20px;
  padding: 5px;
}
.container {
  border-top: 3px solid #bfbfbf;
  background-color: #efefef;
  width: 100%;
  padding-bottom: 10px;
}
.main {
  padding-bottom: 10px;
}
.grids_layout {
  float: left;
  width: 75%;
}
.buttons_layout {
  float: left;
  width: 25%;
}
.buttons {
  margin: 5px;
  background-color: #72c3dc;
  border: none;
  padding-top: 10px;
  padding-bottom: 10px;
  text-transform: uppercase;
  border-radius: 5px;
  color: #fff;
  box-shadow: 0 3px #2b8ead;
  width: 80%;
}
.buttons:hover {
  background-color: #2b8ead;
  box-shadow: 0 3px #72c3dc;
}
.owner {
  color: #333333;
  font-size: 12px;
  font-style: italic;
  text-align: center;
  margin: 15px;
}

@media (max-width: 375px) {
  .root {
    padding: 0px;
  }
  .title {
    background-color: #333333;
    color: #ffffff;
  }
  .container {
    border-top: none;
    background-color: #fff;
  }
  .main {
    display: flex;
    flex-direction: column-reverse;
  }
  .grids_layout {
    width: 100%;
  }
  .buttons_layout {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .buttons {
    max-width: 120px;
  }
}

